Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14891

Working directory is not updated when switching from debug/release with qbs

    XMLWordPrintable

Details

    • 5f3b9dd89c6739024f4f3551d4f9354bd9a3985d

    Description

      When using a QBS project, in project's settings the executable is correctly set by Qt Creator. However, the working directory is set once and never updated.

      To reproduce:

      • Create a simple QBS projet
      • Starts in Debug mode
      • Switch to release
      • Starts in Release mode

      If you go to projet's settings, you will see that the working directory is still the debug one, so you are starting the release .exe from the debug directory.

      This can lead to problems when loading dlls/plugins from current directory.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-14891
        # Subject Branch Project Status CR V

        Activity

          People

            kandeler Christian Kandeler
            thibautd Thibaut DIRLIK
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes